add endpoint for categories crud
